removed parent module, which just led to duplicated settings